# SpotiPy2

./: LICENSE  README.md  params.txt  pyproject.toml  requirements.txt  run_analysis.py
spotipy_tool/: __init__.py  pipeline.py  visualization.py
