[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotipy_multiobs"
version = "0.1.0"
description = "Multi-observable solar CLV analysis tool extending SpotiPy"
authors = [
  { name="Your Name", email="saqib.sumra.5@gmail.com" },
  { name="Original Author", email="whatever@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "sunpy",
    "scipy",
    "opencv-python",
    "reproject",
    "zeep",
    "drms"
]

[project.urls]
"Homepage" = "https://github.com/username/SpotiPy_MultiObs"
